[package]
name = "psui-api"
version = "0.1.0"
authors = ["Jay Rixie <jayrixie@gmail.com>", "Chris Page <page83@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
rand = "*"
