[metadata]
name = radioapi
version = 0.0.2
author = Matt Drozt
author_email = matthew.drozt@gmail.com
description = Purdue Orbital Radio API
long_description = TODO
license = MIT
url = https://github.com/purdue-orbital/PSUI
platforms = unix, linux, osx, cygwin, win32
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
  =.
install_requires =
  colorama>=0.4.4
  pynput>=1.7.5
  pyserial>=3.5

[options.extras_require]
dev = 
  black>=21.12b0
  mypy>=0.910
  isort>=5.10.1

[options.packages.find]
exclude =
  .mypy_cache
  GNU Radio
  json_format
  mocks
  tests